corrections by comments

--- a/src/components/pokemonCard/style.module.css
+++ b/src/components/pokemonCard/style.module.css
@@ -31,7 +31,7 @@
 }
 
 /* TODO: This place where we should change :hover on .active */
-.pokemonCard:active {
+.pokemonCard.active {
     transform: rotateY(0deg);
 }
 
